kubernetes/apps/artemis-cluster/minecraft/app/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft
spec:
  parentRefs:
    - name: external-gateway
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: minecraft
          port: 25565
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-rcon
spec:
  parentRefs:
    - name: external-gateway
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: minecraft-rcon
          port: 25575
